<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.wjb.one</groupId>
  <artifactId>testb</artifactId>
  <version>${com.wjb.one.testb.version}</version>
  <packaging>bundle</packaging>
  
  <properties>
	<com.wjb.one.testb.version>1.0.0-SNAPSHOT</com.wjb.one.testb.version>
  </properties>
  
  <dependencyManagement>
  	<dependencies>
  		<dependency>
  			<groupId>org.apache.felix</groupId>
  			<artifactId>org.osgi.core</artifactId>
  			<version>1.4.0</version>
  		</dependency>
  		<dependency>
  			<groupId>org.apache.felix</groupId>
  			<artifactId>org.osgi.compendium</artifactId>
  			<version>1.4.0</version>
  		</dependency>
  	</dependencies>
  </dependencyManagement>
  
  <dependencies>
 	<!-- Logging dependency -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.7</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>1.7.7</version>
	</dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-core</artifactId>
		<version>1.1.2</version>
	</dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-classic</artifactId>
		<version>1.1.2</version>
	</dependency>
	<dependency>
		<groupId>org.apache.felix</groupId>
		<artifactId>org.osgi.core</artifactId>
	</dependency>
	<dependency>
		<groupId>org.apache.felix</groupId>
		<artifactId>org.osgi.compendium</artifactId>
	</dependency>
  </dependencies>
  
  <build>
	<resources>
		<resource>
			<directory>src/main/resources</directory>
			<filtering>true</filtering>
		</resource>
		<resource>
			<directory>src/main/webapp</directory>
			<filtering>false</filtering>
			<excludes>
				<exclude>**</exclude>
			</excludes>
		</resource>
	</resources>
	<testResources>
		<testResource>
			<directory>src/test/resources</directory>
			<filtering>true</filtering>
		</testResource>
	</testResources>  
  	<pluginManagement>
  		<plugins>
  		  	<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.3</version>
  			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
			</plugin>  			
  			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>2.20</version>
  			</plugin>
  			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-jar-plugin</artifactId>
			  <version>3.1.0</version>
  			</plugin>
  			<plugin>
  			  <groupId>org.apache.felix</groupId>
			  <artifactId>maven-bundle-plugin</artifactId>
			  <version>3.3.0</version>
  			</plugin>
  		</plugins>
  	</pluginManagement>
  	
  	<plugins>
	  	<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-compiler-plugin</artifactId>
		  <configuration>
		  	<source>1.8</source>
		  	<target>1.8</target>
		  	<encoding>UTF-8</encoding>
		  </configuration>
		</plugin>
		<plugin>
			<artifactId>maven-resources-plugin</artifactId>
			<dependencies>
                   <dependency>
                       <groupId>org.apache.maven.shared</groupId>
                       <artifactId>maven-filtering</artifactId>
                       <version>1.3</version>
                   </dependency>
            </dependencies>
		</plugin>		  	
  		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
	  	  <artifactId>maven-surefire-plugin</artifactId>
	  	  <configuration>
	  	  	<argLine>-Xmx=512m -XX:MaxPermSize=256m</argLine>
			<forkMode>once</forkMode>
			<argLine>-enableassertions</argLine>
			<testFailureIgnore>true</testFailureIgnore>
			<parallel>methods</parallel>
			<threadCount>1</threadCount>
	  	  </configuration>
		</plugin>
  		<plugin>
	  		<groupId>org.apache.felix</groupId>
	  		<artifactId>maven-bundle-plugin</artifactId>
	  		<extensions>true</extensions>
	  		<configuration>
	  			<manifestLocation>${project.build.outputDirectory}/META-INF</manifestLocation>
	  			<instructions>
					<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
					<Bundle-Version>${project.version}</Bundle-Version>
					<Export-Package>${bundle.Export-Package};version="${project.version}"</Export-Package>
					<Private-Package>${bundle.Export-Package}.internal,${bundle.Export-Package}.internal.*</Private-Package>
					<_include>osgi.bnd</_include>
	  			</instructions>
	  		</configuration>
	  	</plugin>
  	</plugins>
  </build>
  
  <profiles>
  	<profile>
  		<id>dev</id>
  		<activation>
  			<property>
  				<name>dev</name>
  			</property>
  		</activation>
  	</profile>
  </profiles>
</project>